AC_INIT(libeggtrayicon, 0.0.1, trowbrds@gmail.com)
AC_PREREQ(2.50)
AC_CONFIG_SRCDIR(config.h.in)

LT_CURRENT=0
LT_REVISION=1
LT_AGE=0

AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)

PACKAGE=libeggtrayicon
VERSION=0.0.1

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

AM_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_PROG_CPP
AC_PROG_MAKE_SET
AC_PROG_LN_S
AC_PROG_INSTALL
AC_C_CONST
AC_EXEEXT
AM_PROG_LIBTOOL

pkg_modules="glib-2.0 >= 2.4.0, gobject-2.0 >= 2.4.0, gtk+-2.0 >= 2.4.0"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

GLIB_GENMARSHAL=`$PKG_CONFIG --variable=glib_genmarshal glib-2.0`
AC_SUBST(GLIB_GENMARSHAL)

AC_CONFIG_FILES([
Makefile
eggtrayicon/Makefile
])

AC_OUTPUT
