xchat_gnome_DATA = 			\
	color.png			\
	dcc.png				\
	global-message.png		\
	irc.png				\
	newdata.png			\
	nicksaid.png			\
	plugin-manager.png		\
	servers.png			\
	soap.png			\
	stock_link.png			\
	toilet-paper.png		\
	xchat-gnome-small.png
xchat_gnomedir = $(xchatsharedir)

EXTRA_DIST = $(xchat_gnome_DATA)
